# graphdiffusion

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  train.py  train_circle.py
configs/: EXP-002_circle_radial_k-neighbors.yaml  EXP-002b_circle_radial_k2.yaml  EXP-002c_circle_radial_k4.yaml  EXP-002d_circle_radial_k6.yaml  EXP-003a_circle_radial_amp005.yaml  EXP-003c_circle_radial_amp030.yaml  EXP-004_circle_radial_logit.yaml  EXP-005_circle_radial_full.yaml  EXP-006_circle_radial_rich-features.yaml  EXP-010_ellipse_data_pipeline.yaml  EXP-011_ellipse_shape_method_A.yaml  EXP-012_ellipse_shape_method_B.yaml  EXP-020_fourier_pressure_conditioning.yaml  EXP-021_long_train.yaml  EXP-022_T1000.yaml  EXP-023_min_snr.yaml  EXP-024_ema.yaml  EXP-025_v_pred.yaml  EXP-030_dual_cp.yaml  circle_radial.yaml  default.yaml
docs/: architecture.md  index.md  manual_testing.md
notebooks/: EXP-020_interactive_cp.ipynb  EXP-030_dual_cp_interactive.ipynb  README.md  postprocess_circle.ipynb
scripts/: metrics.py  postprocess_circle.py  postprocess_ellipse.py  postprocess_exp020.py  run.sh  run_cfs3.slurm  run_circle.sh  run_exp_series.sh  run_experiment.slurm  run_experiments.py
tests/: context.py  test_angular_features.py  test_base_dataset.py  test_circle_integration.py  test_circledataset.py  test_cp_editor.py  test_dataloader.py  test_dataset.py  test_ema.py  test_feature_transforms.py  test_graph_diffusion_model.py  test_graph_network.py  test_inference.py  test_integration.py  test_loaders.py  test_metrics.py  test_min_snr_loss.py  test_mlp.py  test_noise_schedule.py  (+8 more)
(+76 files in other folders)
