[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "graph-diffusion"
version = "0.1.0"
description = "Denoising diffusion probabilistic models on graphs (PyTorch Geometric)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "matplotlib>=3.10.9",
    "tensorboard>=2.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/graph_diffusion"]


# ─── Ruff ───────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]             # relaxed annotations in tests

# ─── Black ──────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311"]

# ─── Mypy ───────────────────────────────────────────────────────────────────
[tool.mypy]
strict = true
warn_return_any = true
ignore_missing_imports = true   # torch-scatter has no stubs

# ─── Pytest ─────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
